--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,108 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# =============================
+# TEXTURAS / IMÁGENES (pesadas)
+# =============================
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.tga filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
+*.exr filter=lfs diff=lfs merge=lfs -text
+*.hdr filter=lfs diff=lfs merge=lfs -text
+*.dds filter=lfs diff=lfs merge=lfs -text
+*.ktx filter=lfs diff=lfs merge=lfs -text
+*.ktx2 filter=lfs diff=lfs merge=lfs -text
+*.bmp filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+*.heic filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# GEOMETRÍA / 3D
+# =============================
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.abc filter=lfs diff=lfs merge=lfs -text      # Alembic
+*.stl filter=lfs diff=lfs merge=lfs -text
+*.ply filter=lfs diff=lfs merge=lfs -text
+*.dae filter=lfs diff=lfs merge=lfs -text      # COLLADA
+*.3ds filter=lfs diff=lfs merge=lfs -text
+*.c4d filter=lfs diff=lfs merge=lfs -text
+*.max filter=lfs diff=lfs merge=lfs -text
+*.mb  filter=lfs diff=lfs merge=lfs -text      # Maya Binary
+*.ma  filter=lfs diff=lfs merge=lfs -text      # Maya ASCII (texto pero a menudo muy pesado)
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.gltf filter=lfs diff=lfs merge=lfs -text     # JSON, pero puede ser grande
+
+# =============================
+# AUDIO
+# =============================
+*.wav  filter=lfs diff=lfs merge=lfs -text
+*.aiff filter=lfs diff=lfs merge=lfs -text
+*.aif  filter=lfs diff=lfs merge=lfs -text
+*.ogg  filter=lfs diff=lfs merge=lfs -text
+*.mp3  filter=lfs diff=lfs merge=lfs -text
+*.flac filter=lfs diff=lfs merge=lfs -text
+*.m4a  filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# VÍDEO
+# =============================
+*.mp4  filter=lfs diff=lfs merge=lfs -text
+*.mov  filter=lfs diff=lfs merge=lfs -text
+*.avi  filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
+*.ogv  filter=lfs diff=lfs merge=lfs -text
+*.mkv  filter=lfs diff=lfs merge=lfs -text
+*.mpg  filter=lfs diff=lfs merge=lfs -text
+*.mpeg filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# TIPOGRAFÍAS
+# =============================
+*.ttf   filter=lfs diff=lfs merge=lfs -text
+*.otf   filter=lfs diff=lfs merge=lfs -text
+*.woff  filter=lfs diff=lfs merge=lfs -text
+*.woff2 filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# BINARIOS / PLUGINS
+# =============================
+*.dll     filter=lfs diff=lfs merge=lfs -text
+*.so      filter=lfs diff=lfs merge=lfs -text
+*.dylib   filter=lfs diff=lfs merge=lfs -text
+*.a       filter=lfs diff=lfs merge=lfs -text
+*.lib     filter=lfs diff=lfs merge=lfs -text
+*.bundle  filter=lfs diff=lfs merge=lfs -text  # macOS bundles
+*.framework/** filter=lfs diff=lfs merge=lfs -text
+*.jar     filter=lfs diff=lfs merge=lfs -text
+*.aar     filter=lfs diff=lfs merge=lfs -text
+
+# (Normalmente no versionar builds, pero si se suben…)
+*.apk     filter=lfs diff=lfs merge=lfs -text
+*.ipa     filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# PAQUETES / ARCHIVOS GRANDES VARIOS
+# =============================
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.zip          filter=lfs diff=lfs merge=lfs -text
+*.rar          filter=lfs diff=lfs merge=lfs -text
+*.7z           filter=lfs diff=lfs merge=lfs -text
+*.tar          filter=lfs diff=lfs merge=lfs -text
+*.gz           filter=lfs diff=lfs merge=lfs -text
+*.tgz          filter=lfs diff=lfs merge=lfs -text
+
+# =============================
+# DATOS BRUTOS / BINARIOS AUXILIARES
+# =============================
+*.raw  filter=lfs diff=lfs merge=lfs -text     # Alturas de terreno, etc.
+*.r16  filter=lfs diff=lfs merge=lfs -text
+*.r32  filter=lfs diff=lfs merge=lfs -text
+*.bin  filter=lfs diff=lfs merge=lfs -text
+*.dat  filter=lfs diff=lfs merge=lfs -text
+*.bytes filter=lfs diff=lfs merge=lfs -text
+*.pdb  filter=lfs diff=lfs merge=lfs -text
+*.dmp  filter=lfs diff=lfs merge=lfs -text
